# ai_assistant

./: Dockerfile  README.md  docker-compose.yml  gunicorn_conf.py  pyproject.toml  requirements.txt  variables.env
src/: app.py  config.py  prompt.py  utils.py  vector_provider.py
